@@ -270,6 +270,20 @@ const bfd_arch_info_type bfd_powerpc_archs[] =
     &bfd_powerpc_archs[13]
   },
   {
+    32, /* 32 bits in a word */
+    32, /* 32 bits in an address */
+    8,  /* 8 bits in a byte */
+    bfd_arch_powerpc,
+    bfd_mach_ppc_e500,
+    "powerpc",
+    "powerpc:e500",
+    3,
+    false,
+    powerpc_compatible,
+    bfd_default_scan,
+    &bfd_powerpc_archs[14]
+  },
+  {
     32,       /* 32 bits in a word */
     32,       /* 32 bits in an address */
     8,        /* 8 bits in a byte */
